# readeckbot

./: .env.example  .gitignore  Makefile  README.md  bot.py  config.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
readeckbot/: __init__.py  bot.py  config.py  helpers.py  main.py  md_to_dom.py  readeck_client.py  requests.py
tests/: conftest.py  test_bot.py  test_helpers.py  test_md_to_dom.py  test_readeck_client.py
