[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "readeckbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot",
  "httpx",
  "rich",
  "python-dotenv",
  "telegramify-markdown",
  "your-telegraph",
  "mistletoe",
]
authors = [
    {name = "Martín Gaitán", email = "gaitan@gmail.com"}
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/mgaitan/readeckbot"

[project.scripts]
readeckbot = "readeckbot.main:main"

[tool.ruff]
line-length = 120


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
]
